[package]
name = "nba-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = {version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "mysql"]}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}