[package]
name = "nba-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
sqlx = {version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "mysql"]}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { workspace = true }

[[bin]]
name = "load-data"
test = false
bench = false
path = "src/bin/load_data.rs"
